--- a/pom.xml
+++ b/pom.xml
@@ -54,9 +54,10 @@
 			<version>20180130</version>
 		</dependency>
 		<dependency>
-			<groupId>com.jayway.jsonpath</groupId>
-			<artifactId>json-path</artifactId>
-			<version>2.7.0</version>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.4.1</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
